--- a/dashboard.html
+++ b/dashboard.html
@@ -1,135 +1,180 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>لوحة التحكم - نظام OMA</title>
-  <style>
-    body {
-      font-family: 'Cairo', sans-serif;
-      background: #f5f9ff;
-      margin: 0;
-      padding: 0;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>لوحة تحكم مدير المعهد - نظام OMA</title>
+<style>
+:root {
+  --primary: #004aad;
+  --accent: #ffcc33;
+  --bg: #f5f9ff;
+  --card: #fff;
+}
 
-    header {
-      background-color: #004aad;
-      color: white;
-      text-align: center;
-      padding: 15px 0;
-      font-size: 20px;
-      font-weight: bold;
-    }
+body {
+  font-family: 'Cairo', sans-serif;
+  background: var(--bg);
+  margin: 0;
+  padding: 0;
+}
 
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      padding: 40px;
-      justify-content: center;
-    }
+header {
+  background-color: var(--primary);
+  color: white;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 20px;
+  font-weight: bold;
+}
 
-    .card {
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      text-align: center;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-      transition: 0.3s;
-      cursor: pointer;
-    }
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  padding: 40px;
+  justify-content: center;
+}
 
-    .card:hover {
-      transform: translateY(-5px);
-      background: #eef4ff;
-    }
+.card {
+  background: var(--card);
+  padding: 30px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  transition: 0.3s;
+  cursor: pointer;
+}
 
-    .card h3 {
-      color: #004aad;
-    }
+.card:hover {
+  transform: translateY(-5px);
+  background: #eef4ff;
+}
 
-    #logoutBtn {
-      background-color: #d32f2f;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 16px;
-      transition: 0.3s;
-      display: block;
-      margin: 30px auto;
-    }
+.card h3 {
+  color: var(--primary);
+}
 
-    #logoutBtn:hover {
-      background-color: #b71c1c;
-    }
-  </style>
+#logoutBtn {
+  background-color: #d32f2f;
+  color: white;
+  border: none;
+  padding: 12px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: 0.3s;
+  display: block;
+  margin: 30px auto;
+}
+
+#logoutBtn:hover {
+  background-color: #b71c1c;
+}
+</style>
 </head>
 <body>
-  <header>👋 مرحباً بك في لوحة التحكم - نظام OMA</header>
+<header>👋 مرحباً بك في لوحة تحكم مدير المعهد</header>
 
-  <div class="container">
-    <div class="card" id="studentsCard"><h3>📚 إدارة الطلاب</h3></div>
-    <div class="card" id="teachersCard"><h3>👨‍🏫 إدارة الأساتذة</h3></div>
-    <div class="card" id="classesCard"><h3>🏫 إدارة الحصص</h3></div>
-    <div class="card" id="attendanceCard"><h3>🕓 الحضور والغياب</h3></div>
-    <div class="card" id="settingsCard"><h3>⚙️ الإعدادات</h3></div>
-    <div class="card" id="financeCard"><h3>💰 المالية والمصاريف</h3></div>
-  </div>
+<div class="container">
+  <div class="card" id="studentsCard"><h3>📚 إدارة الطلاب</h3></div>
+  <div class="card" id="teachersCard"><h3>👨‍🏫 إدارة الأساتذة</h3></div>
+  <div class="card" id="classesCard"><h3>🏫 إدارة الحصص</h3></div>
+  <div class="card" id="attendanceCard"><h3>🕓 الحضور والغياب</h3></div>
+  <div class="card" id="settingsCard"><h3>⚙️ الإعدادات</h3></div>
+  <div class="card" id="financeCard"><h3>💰 المالية والمصاريف</h3></div>
+</div>
 
-  <button id="logoutBtn">🔓 تسجيل الخروج</button>
+<button id="logoutBtn">🔓 تسجيل الخروج</button>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-    // 🔹 إعداد Firebase الجديد
-    const firebaseConfig = {
-      apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
-      authDomain: "oma0-33cc0.firebaseapp.com",
-      projectId: "oma0-33cc0",
-      storageBucket: "oma0-33cc0.firebasestorage.app",
-      messagingSenderId: "899300774863",
-      appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
-      measurementId: "G-5CKWYQT9XZ"
-    };
+// 🔹 إعداد Firebase
+const firebaseConfig = {
+  apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
+  authDomain: "oma0-33cc0.firebaseapp.com",
+  projectId: "oma0-33cc0",
+  storageBucket: "oma0-33cc0.firebasestorage.app",
+  messagingSenderId: "899300774863",
+  appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
+  measurementId: "G-5CKWYQT9XZ"
+};
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-    // ✅ منع الدخول إلا بعد تسجيل الدخول
-    onAuthStateChanged(auth, (user) => {
-      if (!user) {
-        window.location.href = "login.html";
+let instituteId = null; // سيتم تعيينه بعد تحميل بيانات المدير
+
+// ✅ منع الدخول إلا بعد تسجيل الدخول والتحقق من نوع المستخدم
+onAuthStateChanged(auth, async (user) => {
+  if (!user) {
+    window.location.href = "login.html";
+    return;
+  }
+
+  const userDoc = await getDoc(doc(db, "users", user.uid));
+  if (!userDoc.exists()) {
+    alert("المستخدم غير موجود!");
+    await signOut(auth);
+    window.location.href = "login.html";
+    return;
+  }
+
+  const userData = userDoc.data();
+  if (userData.type !== "instituteAdmin") {
+    alert("لا يحق لك الدخول إلى لوحة مدير المعهد!");
+    await signOut(auth);
+    window.location.href = "login.html";
+    return;
+  }
+
+  instituteId = userData.instituteId; // معرف المعهد الخاص بالمدير
+
+  // تحميل ألوان المعهد من إعدادات المعهد
+  const instituteDoc = await getDoc(doc(db, "institutes", instituteId));
+  if (instituteDoc.exists()) {
+    const colors = instituteDoc.data().colors || {};
+    if (colors.primary) document.documentElement.style.setProperty('--primary', colors.primary);
+    if (colors.accent) document.documentElement.style.setProperty('--accent', colors.accent);
+    if (colors.bg) document.documentElement.style.setProperty('--bg', colors.bg);
+    if (colors.card) document.documentElement.style.setProperty('--card', colors.card);
+  }
+});
+
+// 🔘 التنقل بين الصفحات الخاصة بالمعهد
+const pageLinks = {
+  studentsCard: "students.html",
+  teachersCard: "teachers.html",
+  classesCard: "classes.html",
+  attendanceCard: "attendance.html",
+  settingsCard: "settings.html",
+  financeCard: "finance.html"
+};
+
+Object.keys(pageLinks).forEach(id => {
+  const el = document.getElementById(id);
+  if (el) {
+    el.addEventListener("click", () => {
+      if(!instituteId){
+        alert("جارٍ تحميل بيانات المعهد، الرجاء الانتظار...");
+        return;
       }
+      // تمرير instituteId للصفحات الفرعية
+      window.location.href = pageLinks[id] + "?instituteId=" + instituteId;
     });
+  }
+});
 
-    // 🔘 التنقل بين الصفحات
-    const pageLinks = {
-      studentsCard: "students.html",
-      teachersCard: "teachers.html",
-      classesCard: "classes.html",
-      attendanceCard: "attendance.html",
-      settingsCard: "settings.html",
-      financeCard: "finance.html"
-    };
-
-    Object.keys(pageLinks).forEach(id => {
-      const el = document.getElementById(id);
-      if (el) {
-        el.addEventListener("click", () => {
-          window.location.href = pageLinks[id];
-        });
-      }
-    });
-
-    // 🔒 زر تسجيل الخروج
-    document.getElementById("logoutBtn").addEventListener("click", async () => {
-      await signOut(auth);
-      alert("تم تسجيل الخروج بنجاح");
-      window.location.href = "login.html";
-    });
-  </script>
+// 🔒 زر تسجيل الخروج
+document.getElementById("logoutBtn").addEventListener("click", async () => {
+  await signOut(auth);
+  alert("تم تسجيل الخروج بنجاح");
+  window.location.href = "login.html";
+});
+</script>
 </body>
 </html>
