--- a/manage-institutes.html
+++ b/manage-institutes.html
@@ -6,71 +6,105 @@
 <title>إنشاء المعهد - نظام OMA</title>
 <style>
 :root {
-  --primary: #004aad;
-  --accent: #ffcc33;
-  --bg: #f5f9ff;
-  --card: #fff;
+  --primary:#004aad;
+  --bg:#f5f9ff;
+  --card:#fff;
 }
-body { font-family: 'Cairo', sans-serif; background: var(--bg); margin: 0; padding: 0; }
-header { background: var(--primary); color: #fff; text-align: center; padding: 15px; font-size: 20px; }
-.container { padding: 30px; display: flex; flex-direction: column; gap: 25px; max-width: 700px; margin: auto; }
-.card { background: var(--card); padding: 25px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-input, select { width: 100%; padding: 10px; margin: 8px 0; border-radius: 6px; border: 1px solid #ccc; }
-button { background: var(--primary); color: #fff; border: none; padding: 12px 20px; border-radius: 8px; cursor: pointer; transition: 0.3s; }
-button:hover { background: #003a8c; }
-.error { color:red; font-size: 14px; margin:5px 0; }
-.success { color:green; font-size: 14px; margin:5px 0; }
-.institute-list { margin-top: 15px; border-top:1px solid #ccc; padding-top: 15px; }
-.institute-item { padding: 8px 0; border-bottom:1px solid #eee; display:flex; justify-content: space-between; }
+
+body {
+  font-family:'Cairo',sans-serif;
+  background: var(--bg);
+  margin:0;
+  padding:20px;
+}
+
+h2 { text-align:center; color:var(--primary); }
+.form-container {
+  background: var(--card);
+  padding:30px;
+  max-width:600px;
+  margin:20px auto;
+  border-radius:12px;
+  box-shadow:0 4px 15px rgba(0,0,0,0.1);
+}
+
+input, select, button {
+  width:100%;
+  padding:12px;
+  margin-bottom:15px;
+  border-radius:8px;
+  border:1px solid #ccc;
+  font-size:15px;
+}
+
+button {
+  background: var(--primary);
+  color:white;
+  border:none;
+  cursor:pointer;
+  transition:0.3s;
+}
+
+button:hover { background:#003a8c; }
+
+.label { font-weight:bold; margin-bottom:5px; display:block; }
+.institutes-list { margin-top:30px; background:#eef4ff; padding:20px; border-radius:10px; }
+.institutes-list h3 { margin-top:0; color:var(--primary); }
+.institute-item { padding:10px; border-bottom:1px solid #ccc; }
+.institute-item:last-child { border-bottom:none; }
 </style>
 </head>
 <body>
 
-<header>📌 إنشاء وإدارة المعاهد - نظام OMA</header>
+<h2>إنشاء معهد جديد</h2>
 
-<div class="container">
+<div class="form-container">
+  <label class="label">اسم المعهد</label>
+  <input type="text" id="instituteName" placeholder="أدخل اسم المعهد">
 
-  <div class="card">
-    <h3>إنشاء معهد جديد</h3>
-    <p class="error" id="errorMsg"></p>
-    <p class="success" id="successMsg"></p>
+  <label class="label">شعار المعهد</label>
+  <input type="file" id="instituteLogo" accept="image/*">
 
-    <input type="text" id="instituteName" placeholder="اسم المعهد" required />
-    <input type="email" id="adminEmail" placeholder="البريد الإلكتروني لمدير المعهد" required />
-    <input type="password" id="adminPassword" placeholder="كلمة المرور للمدير" required />
+  <label class="label">البريد الإلكتروني لمدير المعهد</label>
+  <input type="email" id="adminEmail" placeholder="example@mail.com">
 
-    <label>رفع شعار المعهد</label>
-    <input type="file" id="instituteLogo" accept="image/*" />
+  <label class="label">كلمة المرور لمدير المعهد</label>
+  <input type="password" id="adminPassword" placeholder="********">
 
-    <label>لون رئيسي</label>
-    <input type="color" id="colorPrimary" value="#004aad" />
-    <label>لون ثانوي</label>
-    <input type="color" id="colorAccent" value="#ffcc33" />
+  <label class="label">لون رئيسي</label>
+  <input type="color" id="colorPrimary" value="#004aad">
 
-    <label>مدة الاشتراك</label>
-    <select id="subscriptionType">
-      <option value="lifetime">مدى الحياة</option>
-      <option value="year">سنة</option>
-      <option value="trial">تجريبي</option>
-    </select>
+  <label class="label">لون خلفية</label>
+  <input type="color" id="colorBg" value="#f5f9ff">
 
-    <button id="createInstituteBtn">➕ إنشاء المعهد</button>
-  </div>
+  <label class="label">لون البطاقات</label>
+  <input type="color" id="colorCard" value="#ffffff">
 
-  <div class="card">
-    <h3>قائمة المعاهد</h3>
-    <div id="instituteList" class="institute-list"></div>
-  </div>
+  <label class="label">لون عناصر التمييز</label>
+  <input type="color" id="colorAccent" value="#ffcc33">
 
+  <label class="label">مدة الاشتراك</label>
+  <select id="subscriptionType">
+    <option value="lifetime">مدى الحياة</option>
+    <option value="trial">تجريبي</option>
+  </select>
+
+  <button id="createBtn">إنشاء المعهد</button>
+  <p id="statusMsg" style="color:red;"></p>
+</div>
+
+<div class="institutes-list" id="institutesList">
+  <h3>المعاهد الموجودة</h3>
+  <div id="listContainer"></div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 import { getFirestore, collection, addDoc, getDocs, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-storage.js";
 
-// Firebase configuration
+// 🔹 Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -82,106 +116,100 @@ const firebaseConfig = {
 };
 
 const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
 const db = getFirestore(app);
+const auth = getAuth(app);
 const storage = getStorage(app);
 
-// عناصر HTML
-const instituteNameInput = document.getElementById("instituteName");
-const adminEmailInput = document.getElementById("adminEmail");
-const adminPasswordInput = document.getElementById("adminPassword");
-const logoInput = document.getElementById("instituteLogo");
-const colorPrimaryInput = document.getElementById("colorPrimary");
-const colorAccentInput = document.getElementById("colorAccent");
-const subscriptionSelect = document.getElementById("subscriptionType");
-const createBtn = document.getElementById("createInstituteBtn");
-const errorMsg = document.getElementById("errorMsg");
-const successMsg = document.getElementById("successMsg");
-const instituteListDiv = document.getElementById("instituteList");
+const instituteName = document.getElementById("instituteName");
+const instituteLogo = document.getElementById("instituteLogo");
+const adminEmail = document.getElementById("adminEmail");
+const adminPassword = document.getElementById("adminPassword");
+const colorPrimary = document.getElementById("colorPrimary");
+const colorBg = document.getElementById("colorBg");
+const colorCard = document.getElementById("colorCard");
+const colorAccent = document.getElementById("colorAccent");
+const subscriptionType = document.getElementById("subscriptionType");
+const createBtn = document.getElementById("createBtn");
+const statusMsg = document.getElementById("statusMsg");
+const listContainer = document.getElementById("listContainer");
 
-// عرض المعاهد الحالية
+// تحميل قائمة المعاهد
 async function loadInstitutes() {
-  instituteListDiv.innerHTML = "";
-  const querySnapshot = await getDocs(collection(db,"institutes"));
-  querySnapshot.forEach(docSnap=>{
+  listContainer.innerHTML = "";
+  const querySnapshot = await getDocs(collection(db, "institutes"));
+  querySnapshot.forEach(docSnap => {
     const data = docSnap.data();
     const div = document.createElement("div");
-    div.className = "institute-item";
-    div.innerHTML = `<span>${data.name}</span><span>${data.subscriptionType}</span>`;
-    instituteListDiv.appendChild(div);
+    div.classList.add("institute-item");
+    div.textContent = `${data.name} - البريد: ${data.adminEmail} - تاريخ الإنشاء: ${data.createdAt?.toDate?.().toLocaleDateString() || "غير محدد"}`;
+    listContainer.appendChild(div);
   });
 }
 
 // إنشاء معهد جديد
-createBtn.addEventListener("click", async ()=>{
-  const name = instituteNameInput.value.trim();
-  const email = adminEmailInput.value.trim();
-  const password = adminPasswordInput.value.trim();
-  const logoFile = logoInput.files[0];
-  const primary = colorPrimaryInput.value;
-  const accent = colorAccentInput.value;
-  const subscriptionType = subscriptionSelect.value;
-
-  errorMsg.textContent = "";
-  successMsg.textContent = "";
-
+createBtn.addEventListener("click", async () => {
+  const name = instituteName.value.trim();
+  const email = adminEmail.value.trim();
+  const password = adminPassword.value.trim();
   if(!name || !email || !password){
-    errorMsg.textContent = "الرجاء ملء جميع الحقول المطلوبة.";
+    statusMsg.textContent = "الرجاء تعبئة جميع الحقول المطلوبة.";
     return;
   }
+  statusMsg.textContent = "جاري إنشاء المعهد...";
 
-  createBtn.disabled = true;
-  createBtn.textContent = "جاري الإنشاء...";
-
-  try {
-    // رفع الشعار إذا موجود
-    let logoURL = "";
-    if(logoFile){
-      const logoRef = ref(storage, `institute-logos/${Date.now()}_${logoFile.name}`);
-      await uploadBytes(logoRef, logoFile);
-      logoURL = await getDownloadURL(logoRef);
+  try{
+    let logoUrl = "";
+    if(instituteLogo.files.length > 0){
+      const file = instituteLogo.files[0];
+      const logoRef = ref(storage, `instituteLogos/${Date.now()}_${file.name}`);
+      await uploadBytes(logoRef, file);
+      logoUrl = await getDownloadURL(logoRef);
     }
 
-    // إنشاء مدير المعهد في Firebase Auth
+    // إنشاء مستخدم مدير المعهد
     const userCred = await createUserWithEmailAndPassword(auth, email, password);
-    const adminUid = userCred.user.uid;
+    const adminId = userCred.user.uid;
 
-    // حفظ بيانات المعهد في Firestore
-    await addDoc(collection(db,"institutes"),{
+    // إضافة المعهد إلى Firestore
+    const docRef = await addDoc(collection(db,"institutes"),{
       name,
-      logo: logoURL,
-      colors: { primary, accent },
-      subscriptionType,
-      createdAt: serverTimestamp(),
-      adminUid
-    });
-
-    // حفظ بيانات المدير في collection users
-    await addDoc(collection(db,"users"),{
-      name: "مدير المعهد",
-      email,
-      type: "instituteAdmin",
-      instituteId: adminUid, // معرف المعهد مرتبط بالمدير
+      adminId,
+      adminEmail: email,
+      logoUrl,
+      colors:{
+        primary: colorPrimary.value,
+        bg: colorBg.value,
+        card: colorCard.value,
+        accent: colorAccent.value
+      },
+      subscriptionType: subscriptionType.value,
       createdAt: serverTimestamp()
     });
 
-    successMsg.textContent = "تم إنشاء المعهد بنجاح!";
-    instituteNameInput.value = "";
-    adminEmailInput.value = "";
-    adminPasswordInput.value = "";
-    logoInput.value = "";
+    // ربط المستخدم بالمعهد
+    await addDoc(collection(db,"users"),{
+      uid: adminId,
+      type: "instituteAdmin",
+      instituteId: docRef.id,
+      email: email,
+      createdAt: serverTimestamp()
+    });
 
+    statusMsg.style.color = "green";
+    statusMsg.textContent = "تم إنشاء المعهد بنجاح!";
+    instituteName.value = "";
+    adminEmail.value = "";
+    adminPassword.value = "";
+    instituteLogo.value = "";
     loadInstitutes();
-  } catch(err){
+  }catch(err){
     console.error(err);
-    errorMsg.textContent = "حدث خطأ أثناء إنشاء المعهد.";
-  } finally {
-    createBtn.disabled = false;
-    createBtn.textContent = "➕ إنشاء المعهد";
+    statusMsg.style.color = "red";
+    statusMsg.textContent = "حدث خطأ أثناء إنشاء المعهد.";
   }
 });
 
-// تحميل المعاهد عند فتح الصفحة
+// تحميل القائمة عند فتح الصفحة
 loadInstitutes();
 </script>
 
